# OSSRedact

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODEL-RESULTS.md  MODEL_CARD.md  QUICKSTART.md  README.md  SECURITY.md  requirements-test.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.greptile/: config.json
appliance/: README.md  allowlist.py  client_compat_adapter.py  denylist.py  egress_proxy.py  entity_map.py  gate_service.py  gateway-config.example.yaml  name_carrier.py  openai_adapter.py  privacy_gate.py  redact_core.py  replay_harness.py  responses_adapter.py  secrets_scan.py  tool_arg_policy.py
deploy/: README.md  check-gate-drift.sh  export_quantize_v11_cpu.py  gate_http_policy.py  gate_service_cpu.py  install-git-hooks.sh  ossredact-egress.service  ossredact-gate-cpu.service  pre-push-guard.sh  public_boundary.py  qc-pii-gate-cpu.service  test_install_units.py  test_public_boundary.py  test_repository_profiles.py
docs/: ADAPTERS.md
gate/: README.md  gate_service_cpu.py  gate_service_gpu.py  privacy_gate.py
model-cards/: README.md
training/: eval_heldout.py  labeling.py  labels_v20.json  metrics_contract.py  remap_scheme.py  train_suite.py  train_v11r6_local.sh  train_v12_local.sh
validation/: BASELINE-v7-labelaware.md  README.md  RESULT-base-bakeoff.md  RESULT-base-int8-parity-v11r9c.md  RESULT-cache-compaction-2026-06-27.md  RESULT-gate-latency-2026-06-21.md  RESULT-pdf-batch-heap.md  RESULT-realworld-expenses.md  RESULT-stress-v11r6-firewall.md  RESULT-v10.md  RESULT-v11.md  RESULT-v11r10-org-recall.md  RESULT-v11r6-structural-names.md  RESULT-v11r7-base-org-address.md  RESULT-v11r7-org-address.md  RESULT-v11r9c.md  RESULT-v9remap.md  bar_check_v11.py  baseline_v11r6_labelaware.json  baseline_v7_labelaware.json  bench_gate_detect_latency.py  (+23 more)
workbench/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
workbench/src-tauri/capabilities/: default.json
workbench/src-tauri/icons/: README  icon.icns
workbench/src-tauri/src/: lib.rs  main.rs
(+153 files in other folders)
